@@ -3,6 +3,7 @@
 * [Bug 2855] Parser fix for conditional leap smear code.  Harlan Stenn.
 * [Bug 2855] Report leap smear in the REFID.  Harlan Stenn.
 * [Bug 2856] ntpd should wait() on terminated child processes.  Paul Green.
+* [Bug 2857] Stratus VOS does not support SIGIO.  Paul Green.
 * refidsmear test cleanup.  Tomasz Flendrich.
 * refidsmear function support and tests.  Harlan Stenn.
 * sntp/tests/Makefile.am: remove g_nameresolution.cpp as it tested
